	fixed a bug where if an app either enabled or disabled autocommit,
		that could become the default status of autocommit rather than
		what was set in the config file
	added autocommit on/off to sqlrsh
	fixed a bind-var-related memory leak in mysql drop-in lib
	fixed return values in mysql drop-in lib
	updated getTableList() to exclude system tables

0.44 - updated postgresql drop-in lib for postgresql 8/9 compatibility
	updated mysql drop-in lib for mysql 5.2+ compatibility
	applied Renat's patch to fix the client session count in the stats
	added getDatabase/Table/ColumnList method/functions to API's
	added string inputBind method/function with length
	added bind variable translation
	added transaction block emulation
	added option to drop temporary tables at session-end for oracle
	added option to preserve rows on commit by default with oracle temp
		tables
	added SQLRDEBUG=on/off environment variable to enable/disable
		client-side debug
	added bind variable support to sqlrsh
	added selectDatabase/getCurrentDatabase methods and support in sqlrsh
	added an option in sqlrelay.conf to ignore selectDatabase() calls
	added errorMessage method at connection level
	applied Renat's patch to decrement the session count in the listener
		if the handoff fails
	implemented a generic query translation framework
	implemented generic input bind faking
	fixed a bug that caused an access-after-free condition when debugging
		the connection
	added getLastInsertId() methods and support in sqlrsh and perl DBI
	added a feature to run a set of queries at the start and end of each
		session
	added a feature to "localize" oracle global temporary tables by
		appending a unique id to their names and rewriting all
		subsequent queries to use the new table name

0.43 - updated ruby code build to take sitearch into account during includes
	updated ruby code to map STR2CSTR to StringValuePtr for ruby 1.9
	updated to use rudiments' updated signalclasses