@@ -96,3 +96,4 @@ Fixes/Patches incorporated from:
 	Cal Heldenbrand
 	Claudio Friere
 	Carlos (CJ) Vergara
+	Benno Lange
