@@ -17,6 +17,8 @@
 	fixed a bind-var-related memory leak in mysql drop-in lib
 	fixed return values in mysql drop-in lib
 	updated getTableList() to exclude system tables
+	applied Benno Lange's localstatedir patch to fix a case where the
+		localstatedir command line parameter wasn't working properly
 
 0.44 - updated postgresql drop-in lib for postgresql 8/9 compatibility
 	updated mysql drop-in lib for mysql 5.2+ compatibility
